--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,24 +36,19 @@ jobs:
         run: |
           docker build -t my-streamlit-app:latest .
 
-      - name: Tag Docker image
-        run: |
-          IMAGE_TAG=latest-$(date +%Y%m%d%H%M%S)
-          docker tag my-streamlit-app:latest dilawaizkhan/my-streamlit-app:${IMAGE_TAG}
-        env:
-          IMAGE_TAG: latest-$(date +%Y%m%d%H%M%S)
-
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Tag Docker image
+        run: |
+          docker tag my-streamlit-app:latest dilawaizkhan/my-streamlit-app:latest
+
       - name: Push Docker image to Docker Hub
         run: |
-          docker push dilawaizkhan/my-streamlit-app:${IMAGE_TAG}
-        env:
-          IMAGE_TAG: latest-$(date +%Y%m%d%H%M%S)
+          docker push dilawaizkhan/my-streamlit-app:latest
 
       - name: Run Streamlit App
         run: |
