--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,12 +14,20 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
         with:
-          python-version: '3.9'
+          buildkitd-flags: |
+            --allow-insecure-entitlement security.insecure --allow-insecure-entitlement network.host
+          buildkitd-config-inline: |
+            [registry."100.25.165.10:6000"]
+              http = true
+              insecure = true
+            [registry."54.197.39.98:6000"]
+              http = true
+              insecure = true
 
       - name: Install dependencies
         run: |
@@ -32,9 +40,31 @@ jobs:
           pip install black
           black main.py app.py
 
+      - name: Run tests with pytest
+        run: |
+          pip install -r requirements.txt
+          pytest tests/ --maxfail=5 --disable-warnings --junitxml=results.xml || true
+          
+      - name: Upload test results
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-results
+          path: results.xml
+
+      - name: Report test results
+        uses: dorny/test-reporter@v1
+        with:
+          name: Test Results
+          path: results.xml
+          reporter: pytest
+
       - name: Build Docker image
         run: |
           docker build -t my-streamlit-app:latest .
+
+      - name: Tag Docker image
+        run: |
+          docker tag my-streamlit-app:latest dilawaizkhan/my-streamlit-app:latest
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -42,22 +72,20 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Tag Docker image
-        run: |
-          docker tag my-streamlit-app:latest dilawaizkhan/my-streamlit-app:latest
-
       - name: Push Docker image to Docker Hub
         run: |
           docker push dilawaizkhan/my-streamlit-app:latest
 
-      - name: Run Streamlit App
-        run: |
-          streamlit run app.py &
-        env:
-          OPENAI_API_KEY: ${{ secrets.GROQ_API_KEY }}
+      - name: SSH to remote main server and deploy
+        uses: appleboy/ssh-action@v0.1.6
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            echo "Deploying to deployment server..."
+            cd ~/EKHO/deployment/ekho-backend
+            docker-compose down
+            docker-compose pull
+            docker-compose up -d
 
-      # Optional: Add testing steps here if you have tests
-
-      - name: Deploy to Production
-        if: github.ref == 'refs/heads/main'
-        run: echo "Deploying the app..." # Replace with actual deployment commands if necessary
