--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,10 +40,10 @@ jobs:
           pip install black
           black main.py app.py
 
-      - name: Run tests with pytest
-        run: |
-          pip install -r requirements.txt
-          pytest tests/ --maxfail=5 --disable-warnings --junitxml=results.xml || true
+      # - name: Run tests with pytest
+      #   run: |
+      #     pip install -r requirements.txt
+      #     pytest tests/ --maxfail=5 --disable-warnings --junitxml=results.xml || true
           
       - name: Upload test results
         uses: actions/upload-artifact@v3
