--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,18 +45,18 @@ jobs:
       #     pip install -r requirements.txt
       #     pytest tests/ --maxfail=5 --disable-warnings --junitxml=results.xml || true
           
-      - name: Upload test results
-        uses: actions/upload-artifact@v3
-        with:
-          name: test-results
-          path: results.xml
+      # - name: Upload test results
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: test-results
+      #     path: results.xml
 
-      - name: Report test results
-        uses: dorny/test-reporter@v1
-        with:
-          name: Test Results
-          path: results.xml
-          reporter: pytest
+      # - name: Report test results
+      #   uses: dorny/test-reporter@v1
+      #   with:
+      #     name: Test Results
+      #     path: results.xml
+      #     reporter: pytest
 
       - name: Build Docker image
         run: |
