--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,12 +55,17 @@ jobs:
         run: |
           docker push dilawaizkhan/my-streamlit-app:latest
 
+      - name: Check SSH connection
+        run: nc -zv 203.128.11.19 22
+
       - name: SSH to remote main server and deploy
         uses: appleboy/ssh-action@v0.1.6
         with:
-          host: ${{ secrets.SSH_HOST }}
+          host: 203.128.11.19
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
+          # Use `key` instead of `password` if you're using SSH key-based authentication
+          # key: ${{ secrets.SSH_KEY }}
           script: |
             echo "Deploying to deployment server..."
             docker-compose down
