--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,53 +22,32 @@ jobs:
           buildkitd-flags: |
             --allow-insecure-entitlement security.insecure --allow-insecure-entitlement network.host
           buildkitd-config-inline: |
-            [registry."129.168.2.30:6000"]
+            [registry."203.128.11.19:6000"]
               http = true
               insecure = true
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install streamlit
-
-      - name: Format with black
-        run: |
-          pip install black
-          black main.py app.py
-
-      - name: Build Docker image
-        run: |
-          docker build -t my-streamlit-app:latest .
-
-      - name: Tag Docker image
-        run: |
-          docker tag my-streamlit-app:latest dilawaizkhan/my-streamlit-app:latest
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+      - name: Build and push Docker image to registry
+        uses: docker/build-push-action@v5
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Push Docker image to Docker Hub
-        run: |
-          docker push dilawaizkhan/my-streamlit-app:latest
+          context: .
+          push: true
+          tags: |
+            203.128.11.19:6000/my-streamlit-app:${{ github.sha }}
+            203.128.11.19:6000/my-streamlit-app:latest
+          registry: 203.128.11.19:6000
 
       - name: Check SSH connection
         run: nc -zv 203.128.11.19 22
 
-      - name: SSH to remote main server and deploy
+      - name: SSH to remote server and deploy
         uses: appleboy/ssh-action@v0.1.6
         with:
-          host: 203.128.11.19
+          host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
-          password: ${{ secrets.SSH_PASSWORD }}
-          # Use `key` instead of `password` if you're using SSH key-based authentication
-          # key: ${{ secrets.SSH_KEY }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             echo "Deploying to deployment server..."
+            cd ~/EKHO/deployment/ekho-backend
             docker-compose down
             docker-compose pull
             docker-compose up -d
-          timeout: 600s
