--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,9 +4,6 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
   build-and-deploy:
@@ -16,27 +13,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          buildkitd-flags: |
-            --allow-insecure-entitlement security.insecure --allow-insecure-entitlement network.host
-          buildkitd-config-inline: |
-            [registry."203.128.11.19:6000"]
-              http = true
-              insecure = true
-
-      - name: Build and push Docker image to registry
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: |
-            203.128.11.19:6000/my-streamlit-app:${{ github.sha }}
-            203.128.11.19:6000/my-streamlit-app:latest
-
-      - name: Check SSH connection
-        run: nc -zv 203.128.11.19 22
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install streamlit
 
       - name: SSH to remote server and deploy
         uses: appleboy/ssh-action@v0.1.6
@@ -46,6 +27,8 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             echo "Deploying to deployment server..."
+            cd ~/EKHO/deployment/ekho-backend
             docker-compose down
             docker-compose pull
             docker-compose up -d
+          debug: true
