--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build-and-deploy:
@@ -13,28 +16,54 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Build and push Docker image to registry
-        uses: docker/build-push-action@v5
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
         with:
-          context: .
-          push: true
-          tags: |
-            203.128.11.19:6000/my-streamlit-app:${{ github.sha }}
-            203.128.11.19:6000/my-streamlit-app:latest
+          buildkitd-flags: |
+            --allow-insecure-entitlement security.insecure --allow-insecure-entitlement network.host
+          buildkitd-config-inline: |
+            [registry."203.128.11.19:6000"]
+              http = true
+              insecure = true
 
-      - name: Check SSH connection
-        run: nc -zv 203.128.11.19 22
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install streamlit
 
-      - name: SSH to remote server and deploy
+      - name: Format with black
+        run: |
+          pip install black
+          black main.py app.py
+
+      - name: Build Docker image
+        run: |
+          docker build -t 203.128.11.19:6000/my-streamlit-app:latest .
+
+      - name: Tag Docker image
+        run: |
+          docker tag 203.128.11.19:6000/my-streamlit-app:latest dilawaizkhan/my-streamlit-app:latest
+
+      - name: Log in to private Docker registry
+        uses: docker/login-action@v2
+        with:
+          registry: 203.128.11.19:6000
+
+      - name: Push Docker image to private registry
+        run: |
+          docker push 129.168.2.30:6000/my-streamlit-app:latest
+
+      - name: SSH to remote main server and deploy
         uses: appleboy/ssh-action@v0.1.6
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
-          key: ${{ secrets.SSH_PASSWORD }}
+          password: ${{ secrets.SSH_PASSWORD }}
           script: |
             echo "Deploying to deployment server..."
+            cd ~/dilawaiz
             docker-compose down
             docker-compose pull
             docker-compose up -d
-          debug: true
-
+          timeout: 600s
