--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,17 +26,6 @@ jobs:
               http = true
               insecure = true
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install streamlit
-
-      - name: Format with black
-        run: |
-          pip install black
-          black main.py app.py
-
       - name: Build Docker image
         run: |
           docker build -t 203.128.11.19:6000/my-streamlit-app:latest .
@@ -49,6 +38,8 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: 203.128.11.19:6000
+          username: ${{ secrets.SSH_USERNAME }}
+          password: ${{ secrets.SSH_PASSWORD }}
 
       - name: Push Docker image to private registry
         run: |
