--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Configure Docker Daemon for Insecure Registry
+      run: |
+        echo '{"insecure-registries" : ["203.128.11.19:6000"]}' | sudo tee /etc/docker/daemon.json
+        sudo systemctl restart docker
+
       - name: Build and push Docker image to registry
         uses: docker/build-push-action@v5
         with:
